syntax = "proto3";

enum VoteOption {
	// VOTE_OPTION_UNSPECIFIED defines a no-op vote option.
	VOTE_OPTION_UNSPECIFIED = 0;
	// VOTE_OPTION_YES defines a yes vote option.
	VOTE_OPTION_YES = 1;
	// VOTE_OPTION_ABSTAIN defines an abstain vote option.
	VOTE_OPTION_ABSTAIN = 2;
	// VOTE_OPTION_NO defines a no vote option.
	VOTE_OPTION_NO = 3;
	// VOTE_OPTION_NO_WITH_VETO defines a no with veto vote option.
	VOTE_OPTION_NO_WITH_VETO = 4;
}

message MsgVote {
	uint64 proposal_id = 1;
	string voter = 2;
	VoteOption option = 3;
}
